k8s/ingress-nginx.yml
# use ingress to route traffic to the grpc service
apiVersion: networking.k8s.io/v1
kind: IngressClass
metadata:
  name: nginx
spec:
  controller: k8s.io/ingress-nginx
