k8s/deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: grpc-deployment
  labels:
    app: grpc-api
spec:
  replicas: 1
  selector:
    matchLabels:
      app: grpc-api
  template:
    metadata:
      labels:
        app: grpc-api
    spec:
      containers:
        - name: grpc-api
          image: 975049907833.dkr.ecr.eu-central-1.amazonaws.com/grpc:09192eb8c09cbe530134afa958e99e4df96800e0
          ports:
            - containerPort: 8080
