k8s/service.yml
apiVersion: v1
kind: Service
metadata:
  name: grpc-service
spec:
  selector:
    app: grpc-api
  ports:
    - protocol: TCP
      port: 80
      targetPort: 8080
  # type: LoadBalancer # expose the service to the internet, if not specified the type is ClusterIP
